# global_counter

./: Cargo.toml  LICENSE-APACHE  README.md
src/: generic.rs  lib.rs
src/primitive/: exact.rs  fast.rs  mod.rs
