[package]
name = "global_counter"
version = "0.1.0"
authors = ["Lukas Riemer <lksriemer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Prior to 1.0.0, even patch bumps can break compatibility.
parking_lot = "0.10.0"

# Only mayor version bumps can break compatibility.
lazy_static = "1"