[package]
name = "global_counter"
version = "0.1.3"
authors = ["Lukas Riemer <lksriemer@gmail.com>"]
description = "Global, thread-safe counters"
repository = "https://github.com/LukiRe/global_counter"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"

[features]
default = ["parking_lot"]

[dependencies]
# Prior to 1.0.0, even patch bumps can break compatibility.
parking_lot = {version = "0.10.0", optional = true}

# Only mayor version bumps can break compatibility.
lazy_static = "1"